Possibly fix filter search for accommodations